Main_Folder/MY_PROJECTS/timer/src/App.scss
/*{
  -display/layout
  -position
  -margin
  -border
  -dimensions
  -padding
  -background-colors
  -typography
  -color
}*/

.App {
  height: 100vh;
  min-height: 100vh;
  max-height: 100vh;

  //border:solid red;

  background-color: yellow;
  text-align: center;
  color: white;

  #container {
    display: grid;
    grid-template-areas:
      ". circle ."
      ". circle ."
      "session circle break";

    width: 100%;
    height: 100%;
    max-width: 100%;
    max-height: 100%;
    min-width: 100%;
    min-height: 100%;

    background-color: rgb(0, 50, 75);
  }
  .labels {
    grid-area: label;
    margin-bottom: 15px;

    //border:solid red;

    font-size: 250%;
  }

  .fa-pause,
  .fa-play {
    max-width: 100%;
    max-height: 100%;
  }

  .settings-buttons {
    //margin-top: 10px;
    //margin-bottom: 10px;

    //width: 100%;
    flex-basis: 30%;
    height: max-content;
    aspect-ratio: 1 / 1;

    background-color: rgb(96, 132, 161);
  }

  .fa-arrow {
    color: rgb(96, 132, 161);
  }

  .start-refresh-buttons {
    //min-width: 30%;
    height: max-content;
    aspect-ratio: 1 / 1;
    //border: solid green;
    background-color: rgb(0, 50, 75);
  }

  .time-modifiers {
    display: flex;
    flex-direction: column;
    /*grid-template-columns: 30% 1fr 30%;
    grid-template-areas:
      ". label ."
      "increment value decrement";*/

    margin: auto;

    // border: solid salmon;

    width: 100%;
    min-width: 100%;

    padding: none;
  }

  .increment-buttons {
    grid-area: increment;
  }

  .length-values {
    grid-area: value;

    // border: dotted red;

    flex-basis: 10%;

    padding: 0;

    font-size: 4vw;
  }

  .decrement-buttons {
    grid-area: decrement;
  }

  .btn-row {
    display: flex;
  }

  #timed-buttons {
    display: "flex";
    flex-direction: row;
    justify-content: "space-evenly";

    right: 5%;

    border: solid yellow;
  }

  #time-left {
    font-size: 120px;
  }

  #start-pause-refresh-buttons {
    display: flex;
    justify-content: space-evenly;

    position: relative;

    bottom: -12%;

    //border: solid black;

    min-width: 45%;
  }

  #circle {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    position: relative;
    grid-area: circle;

    margin: auto;
    left: 0;
    right: 0;

    border: 2px solid;
    border-radius: 50%;

    width: 50vw;
    aspect-ratio: 1 / 1;

    padding: none;

    font-size: 3vw;
  }

  #session {
    grid-area: session;

    /*border: solid salmon;

    width: 100%;
    max-width: 100%;
    max-height: 100%;*/
  }

  #timer-label {
    align-self: flex-start;
    margin-left: 17%;

    margin-bottom: -2%;

    //border: solid wheat;

    font-size: 2.5vw;
    font-weight: 100;
  }

  #time-left {
    //  border:solid yellow;

    padding: 0;

    font-size: 500%;
    line-height: 85%;
  }

  #break {
    grid-area: break;

    /*border: solid salmon;

    width: 100%;
    max-width: 100%;
    max-height: 100%;*/
  }

  button {
    margin: auto;

    border-radius: 50%;
    border-width: 0;
    box-shadow: 1px 1px 5px 1px white, -1px -1px 5px, white, -1px 1px 5px white,
      1px -1px 5px white;

    width: 36px;
    height: 36px;
    max-width: 100%;

    //background-color: darkblue;

    color: white;
  }

  @media screen and (max-width: 500px) {
    // for mobile phones
    #container {
      grid-template-areas:
        "circle"
        "circle"
        "session"
        "break";
    }

    #circle {
      width: 80%;
      aspect-ratio: 1 / 1;

      #timer-label {
        font-size: 4vw;
      }
    }

    #start-pause-refresh-buttons {
      min-width: 50%;
      max-width: 50%;
    }
  }
}

